test/zinc_source/compile_errors/annotations/09_invalid_numeric_literal.zn
// expected-error: syntax error

fn main() {
    print(2.0e)
}
